fix: improve contrast in calendar

--- a/src/app/calendar/report/report.component.scss
+++ b/src/app/calendar/report/report.component.scss
@@ -5,4 +5,5 @@
 }
 .legend {
   text-align: center;
+  font-weight: 600;
 }
